prevent content from overflowing viewport

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -198,6 +198,7 @@ button {
     max-width: 100%;
     margin: 0 auto;
     padding-bottom: 50px;
+    overflow: hidden;
     @media(max-width: @mobile-breakpoint) {
         padding-bottom: 30px;
     }
